--- a/01.request/2.data_dig_allergy.ipynb
+++ b/01.request/2.data_dig_allergy.ipynb
@@ -164,27 +164,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# rawmtrl 맞춤법 검사 --> 오타가 있음(소백분 같은 경우)\n",
     "# 우선 정규화를 먼저 진행하고, 그다음에 진행\n",
     "\n",
-    "\n",
-    "\n",
     "from hanspell import spell_checker\n",
     "import json\n",
     "df_allergy['rawmtrl_checked'] = \"\"\n",
     "datas = df_allergy['rawmtrl_normalize'] \n",
     "for i, n in enumerate(datas):\n",
-    "    input = n.replace(\"&\",\"\").replace(\"*\",\"\").replace(\"{\",\"\").replace(\"}\",\"\").replace(\"/\",\"\") #&가 있으면 xml 문자열에서 에러를 일으킴\n",
-    "    result = spell_checker.check(input)\n",
-    "    result_dict = result.as_dict()\n",
-    "    df_allergy.at[i, 'rawmtrl_checked'] = result_dict['checked']\n",
-    "    \n",
+    "    try: \n",
+    "        input = n.replace(\"&\",\"\").replace(\"*\",\"\").replace(\"{\",\"\").replace(\"}\",\"\").replace(\"/\",\"\") #&가 있으면 xml 문자열에서 에러를 일으킴\n",
+    "        result = spell_checker.check(input)\n",
+    "        result_dict = result.as_dict()\n",
+    "        df_allergy.at[i, 'rawmtrl_checked'] = result_dict['checked']\n",
+    "    except:\n",
+    "        df_allergy.at[i, 'rawmtrl_checked'] = n\n",
+    "        pass\n",
+    "\n",
+    "df_allergy.to_csv('data/0508.csv')\n",
     "#88분 걸림"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -320,7 +330,7 @@
    "outputs": [],
    "source": [
     "# df = pd.read_csv('data/allergy_search_0504.csv')\n",
-    "df['allergy_1'].unique()"
+    "# df['allergy_1'].unique()"
    ]
   },
   {
