--- a/01.request/2-2.dict_key_value_return_end.ipynb
+++ b/01.request/2-2.dict_key_value_return_end.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re \n",
-    "# pd.set_option('display.max_rows', None)\n",
-    "# pd.set_option('display.max_colwidth', None)"
+    "from hanspell import spell_checker\n",
+    "import json\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_colwidth', None)"
    ]
   },
   {
@@ -101,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 딕셔너리 키값 반환"
+    "### 맞춤법 (오탈자 늘어나는 기적)"
    ]
   },
   {
@@ -110,24 +112,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pattern = '[^ㄱ-ㅎㅏ-ㅣ가-힣()[\\],]+' # 한글, 괄호, 대괄호, 쉼표, 마침표를 제외한 모든 문자 삭제 (정규화)\n",
+    "# df_allergy['rawmtrl_normalize'] = df_allergy['rawmtrl'].apply(lambda x: re.sub(pattern, ' ', x))\n",
+    "\n",
+    "# # rawmtrl 맞춤법 검사 --> 오타가 있음(소백분 같은 경우)\n",
+    "# # 우선 정규화를 먼저 진행하고, 그다음에 진행\n",
+    "\n",
+    "# df_allergy['rawmtrl_checked'] = \"\"\n",
+    "# datas = df_allergy['rawmtrl_normalize'] \n",
+    "# for i, n in enumerate(datas):\n",
+    "#     try: \n",
+    "#         input = n #&가 있으면 xml 문자열에서 에러를 일으킴\n",
+    "#         result = spell_checker.check(input)\n",
+    "#         result_dict = result.as_dict()\n",
+    "#         df_allergy.at[i, 'rawmtrl_checked'] = result_dict['checked']\n",
+    "#     except: #오류 발생하는 특정한 애들이 있는데, 왜 오류가 발생하는지 잘 모르겠음...\n",
+    "#         df_allergy.at[i, 'rawmtrl_checked'] = n + ''\n",
+    "#         pass\n",
+    "\n",
+    "# #88분 걸림"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 딕셔너리 키값 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# allergy_dict 미리 정의\n",
-    "allergy_dict = {1: ['알류', '계란', '달걀', '난류','메추리알','메추리','추리알','난각','날류','난백','난황','난각','게란','전란','흰자','노른자'], \n",
-    "                2: ['우유','유우', '탈지분유','유유','분유','유청','카제인','우류','가공버터','유크림','크림','유청','치즈','원유'], \n",
+    "allergy_dict = {1: ['알류', '계란', '달걀', '난류','메추리알','추리알','난각','날류','난백','난황','난각','게란','전란','흰자','노른자'], \n",
+    "                2: ['우유','유우', '탈지분유','유유','분유','유청','카제인','우류','가공버터','유크림','크림','유청','치즈','원유', '요구르트', '요거트','유당','아이스크림','연유','농축유' ], \n",
     "                3: ['메밀'], \n",
-    "                4: ['땅콩', '탕콩'],\n",
-    "                5: ['대두','두부','콩','유부','된장','대두유','대두단백'], \n",
+    "                4: ['땅콩', '탕콩', '피넛'],\n",
+    "                5: ['대두','두부','콩','유부','된장','대두유','대두단백','레시틴',''], \n",
     "                6: ['밀','밀가루','소맥','소맥분', '밀제품'], \n",
     "                7: ['고등어'], \n",
     "                8: ['게'], \n",
     "                9: ['새우'], \n",
-    "                10: ['돼지','돈','돼지고기','괘지','괘지고기','돼고기','돈창', '돈혈', '돈지방','괘','젤라틴','돈육'],\n",
+    "                10: ['돼지','돈','돼지고기','괘지','괘지고기','돼고기','돈창', '돈혈', '돈지방','괘','젤라틴','돈육','순대'],\n",
     "                11: ['복숭아','황도','백도','천도'], \n",
     "                12: ['토마토', '토마투','토마도','토마','토미토'],\n",
     "                13: ['아황산', '아황산나트륨', '이황산', '이산화', '아산화', '이산화황','아산화황','이산화항','이황산류'],\n",
-    "                14: ['호두','호도'], \n",
+    "                14: ['호두','호도','월넛'], \n",
     "                15: ['닭', '닭고기', '계육','닭괴','치킨','닭다리', '닭정육', '계정육', '닭가슴살', '닭안심'], \n",
-    "                16: ['쇠고기', '우육', '소고기', '소뼈','쇠구기', '한우', '우정육', '소정육','소뼈','소잡뼈','우골','소갈비','소내장','소창자','우지','소기름'], \n",
-    "                17: ['오징어', '오지엉','오지','지엉'],\n",
+    "                16: ['쇠고기', '우육', '소고기', '소뼈','쇠구기', '한우', '우정육', '소정육','소뼈','소잡뼈','우골','소갈비','소내장','소창자','우지','소기름','소안심','소등심'], \n",
+    "                17: ['오징어'],\n",
     "                18: ['조개류','굴','홍합','조개','백합','바지락','전복'], \n",
     "                19: ['잣'],\n",
     "                #20: ['아몬드','헤이즐넛','참깨','피칸'],\n",
@@ -137,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +183,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'조개류\\\\([^\\\\)]+\\\\)'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -300,35 +357,17 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12069</th>\n",
-       "      <td>면-소맥분(호주산,미국산),변성전분,팜유(말레이시아산),활성소맥글루텐(프랑스산),정...</td>\n",
-       "      <td>밀, 대두, 계란, 우유, 닭고기, 쇠고기</td>\n",
-       "      <td>2,6,15</td>\n",
-       "      <td>1,2,5,6,15,16</td>\n",
-       "      <td>1,15,16,2,5,6</td>\n",
-       "      <td>난류(가금류),닭고기,쇠고기,우유,대두,밀</td>\n",
+       "      <th>6592</th>\n",
+       "      <td>프리미엄치즈54%[모자렐라치즈(프랑스,독일,미국,호주),렌넷카제인,정제팜유(말레이시아),전분,식염],동화건조빵가루[소맥분(밀:미국산,호주산),쇼트닝{정제팜유(말레이시아산),천연토코페롤},포도당,이스트,정제소금(국산),대두분],고소한빵가루배합용[밀가루(밀:미국산,호주산),생이스트,정제소금(국산),이스트후드(황산칼슘,정제염,황산암모늄,염화암모늄,비타민씨)],제이에이치배터씨에스[박력분,정제소금,무수결정포도당,L-글루타민산나트륨(향미증진제),정백당],난백액,정제수</td>\n",
+       "      <td>밀, 계란, 우유, 대두</td>\n",
+       "      <td>1,2,5,6</td>\n",
+       "      <td>1,2,5,6</td>\n",
+       "      <td>1,2,5,6</td>\n",
+       "      <td>난류(가금류),우유,대두,밀</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1376</th>\n",
-       "      <td>인스턴트커피(콜롬비아)90%,L-카르니틴 5%,그린커피빈추출분말 5%</td>\n",
-       "      <td>알수없음</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8574</th>\n",
-       "      <td>정제수,액상과당,레몬농축과즙(레몬과즙6%),레몬퓨레,탄산가스,합성착향료(레몬향),구...</td>\n",
-       "      <td>알수없음</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6269</th>\n",
-       "      <td>유기농현미(국산)64%, 유기농설탕(수입)21%, 유기농이소말토올리고당(국산)6%,...</td>\n",
+       "      <th>8182</th>\n",
+       "      <td>청포도과즙농축액(청포도과즙으로2%,미국산),정제수,백설탕,요구르트베이스[탈지분유(국산,우유),백설탕,구연산,유산균],구연산,펙틴,합성착향료(청포도향,시트러스향),자일리톨0.1%,구연산나트륨,비타민C,자당지방산에스테르,수크랄로스(합성감미료),아세설팜칼륨(합성감미료)</td>\n",
        "      <td>알수없음</td>\n",
        "      <td>2</td>\n",
        "      <td></td>\n",
@@ -336,42 +375,53 @@
        "      <td>우유</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14379</th>\n",
-       "      <td>녹차10%(국내산),백설탕90%</td>\n",
+       "      <th>7742</th>\n",
+       "      <td>국내산 돈육100%</td>\n",
        "      <td>알수없음</td>\n",
+       "      <td>10</td>\n",
        "      <td></td>\n",
+       "      <td>10</td>\n",
+       "      <td>돼지고기</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11328</th>\n",
+       "      <td>정제수,액상과당,백설탕,이산화탄소,구연산,레몬라임향</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>13</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>13</td>\n",
+       "      <td>아황산류</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>한우앞다리100%</td>\n",
+       "      <td>쇠고기</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>쇠고기</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 rawmtrl  \\\n",
-       "12069  면-소맥분(호주산,미국산),변성전분,팜유(말레이시아산),활성소맥글루텐(프랑스산),정...   \n",
-       "1376              인스턴트커피(콜롬비아)90%,L-카르니틴 5%,그린커피빈추출분말 5%   \n",
-       "8574   정제수,액상과당,레몬농축과즙(레몬과즙6%),레몬퓨레,탄산가스,합성착향료(레몬향),구...   \n",
-       "6269   유기농현미(국산)64%, 유기농설탕(수입)21%, 유기농이소말토올리고당(국산)6%,...   \n",
-       "14379                                  녹차10%(국내산),백설탕90%   \n",
+       "                                                                                                                                                                                                                                                                 rawmtrl  \\\n",
+       "6592   프리미엄치즈54%[모자렐라치즈(프랑스,독일,미국,호주),렌넷카제인,정제팜유(말레이시아),전분,식염],동화건조빵가루[소맥분(밀:미국산,호주산),쇼트닝{정제팜유(말레이시아산),천연토코페롤},포도당,이스트,정제소금(국산),대두분],고소한빵가루배합용[밀가루(밀:미국산,호주산),생이스트,정제소금(국산),이스트후드(황산칼슘,정제염,황산암모늄,염화암모늄,비타민씨)],제이에이치배터씨에스[박력분,정제소금,무수결정포도당,L-글루타민산나트륨(향미증진제),정백당],난백액,정제수   \n",
+       "8182                                                                                                                 청포도과즙농축액(청포도과즙으로2%,미국산),정제수,백설탕,요구르트베이스[탈지분유(국산,우유),백설탕,구연산,유산균],구연산,펙틴,합성착향료(청포도향,시트러스향),자일리톨0.1%,구연산나트륨,비타민C,자당지방산에스테르,수크랄로스(합성감미료),아세설팜칼륨(합성감미료)   \n",
+       "7742                                                                                                                                                                                                                                                          국내산 돈육100%   \n",
+       "11328                                                                                                                                                                                                                                       정제수,액상과당,백설탕,이산화탄소,구연산,레몬라임향   \n",
+       "87                                                                                                                                                                                                                                                             한우앞다리100%   \n",
        "\n",
-       "                       allergy allergens     allergens2        num_sum  \\\n",
-       "12069  밀, 대두, 계란, 우유, 닭고기, 쇠고기    2,6,15  1,2,5,6,15,16  1,15,16,2,5,6   \n",
-       "1376                      알수없음                                           \n",
-       "8574                      알수없음                                           \n",
-       "6269                      알수없음         2                             2   \n",
-       "14379                     알수없음                                           \n",
-       "\n",
-       "                   new_allergy  \n",
-       "12069  난류(가금류),닭고기,쇠고기,우유,대두,밀  \n",
-       "1376                            \n",
-       "8574                            \n",
-       "6269                        우유  \n",
-       "14379                           "
+       "             allergy allergens allergens2  num_sum      new_allergy  \n",
+       "6592   밀, 계란, 우유, 대두   1,2,5,6    1,2,5,6  1,2,5,6  난류(가금류),우유,대두,밀  \n",
+       "8182            알수없음         2                   2               우유  \n",
+       "7742            알수없음        10                  10             돼지고기  \n",
+       "11328           알수없음        13                  13             아황산류  \n",
+       "87               쇠고기        16         16       16              쇠고기  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
