--- a/01.request/2-1.dict_key_value_return.ipynb
+++ b/01.request/2-1.dict_key_value_return.ipynb
@@ -168,8 +168,7 @@
    ],
    "source": [
     "df_allergy = pd.read_csv('data/0508.csv')\n",
-    "df = df_allergy[['rawmtrl','allergy']]\n",
-    "df.fillna('-')"
+    "df = df_allergy[['rawmtrl','allergy']]\n"
    ]
   },
   {
