--- a/01.request/1-1.request_소보원.ipynb
+++ b/01.request/1-1.request_소보원.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,19 +502,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>위해부위 소분류</th>\n",
+       "      <th>위해자성별</th>\n",
+       "      <th>위해자연령</th>\n",
+       "      <th>위해증상 소분류</th>\n",
+       "      <th>위험및위해원인 소분류</th>\n",
+       "      <th>접수일</th>\n",
+       "      <th>치료기간</th>\n",
+       "      <th>품목대분류</th>\n",
+       "      <th>품목소분류</th>\n",
+       "      <th>품목중분류</th>\n",
+       "      <th>년도_분기</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>전신 손상</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>알레르기</td>\n",
+       "      <td>식품 섭취에 의한 위험 및 위해</td>\n",
+       "      <td>2021-07-05</td>\n",
+       "      <td>해당없음</td>\n",
+       "      <td>축산·수산물 식품</td>\n",
+       "      <td>돼지</td>\n",
+       "      <td>축산물-포유류</td>\n",
+       "      <td>2021-Q3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3331</th>\n",
+       "      <td>위해부위 확인불가</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>알레르기</td>\n",
+       "      <td>식품 섭취에 의한 위험 및 위해</td>\n",
+       "      <td>2021-07-13</td>\n",
+       "      <td>해당없음</td>\n",
+       "      <td>가공식품</td>\n",
+       "      <td>일반 다이어트 식품</td>\n",
+       "      <td>건강식품-다이어트 제품</td>\n",
+       "      <td>2021-Q3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8192</th>\n",
+       "      <td>눈 및 눈주변(눈썹 및 눈꺼풀)</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>알레르기</td>\n",
+       "      <td>식품 섭취에 의한 위험 및 위해</td>\n",
+       "      <td>2021-07-27</td>\n",
+       "      <td>해당없음</td>\n",
+       "      <td>축산·수산물 식품</td>\n",
+       "      <td>고등어</td>\n",
+       "      <td>수산물-해양어류</td>\n",
+       "      <td>2021-Q3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11129</th>\n",
+       "      <td>입술, 혀</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>알레르기</td>\n",
+       "      <td>식품 섭취에 의한 위험 및 위해</td>\n",
+       "      <td>2021-08-06</td>\n",
+       "      <td>해당없음</td>\n",
+       "      <td>축산·수산물 식품</td>\n",
+       "      <td>소</td>\n",
+       "      <td>축산물-포유류</td>\n",
+       "      <td>2021-Q3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13216</th>\n",
+       "      <td>전신 손상</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>알레르기</td>\n",
+       "      <td>식품 섭취에 의한 위험 및 위해</td>\n",
+       "      <td>2021-08-17</td>\n",
+       "      <td>해당없음</td>\n",
+       "      <td>가공식품</td>\n",
+       "      <td>떡볶이(라볶이)</td>\n",
+       "      <td>외식-분식</td>\n",
+       "      <td>2021-Q3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                위해부위 소분류 위해자성별 위해자연령 위해증상 소분류        위험및위해원인 소분류        접수일  \\\n",
+       "682                전신 손상    여자  36.0     알레르기  식품 섭취에 의한 위험 및 위해 2021-07-05   \n",
+       "3331           위해부위 확인불가    여자  알수없음     알레르기  식품 섭취에 의한 위험 및 위해 2021-07-13   \n",
+       "8192   눈 및 눈주변(눈썹 및 눈꺼풀)    여자  25.0     알레르기  식품 섭취에 의한 위험 및 위해 2021-07-27   \n",
+       "11129              입술, 혀    여자  44.0     알레르기  식품 섭취에 의한 위험 및 위해 2021-08-06   \n",
+       "13216              전신 손상    여자  29.0     알레르기  식품 섭취에 의한 위험 및 위해 2021-08-17   \n",
+       "\n",
+       "       치료기간      품목대분류       품목소분류         품목중분류    년도_분기  \n",
+       "682    해당없음  축산·수산물 식품          돼지       축산물-포유류  2021-Q3  \n",
+       "3331   해당없음       가공식품  일반 다이어트 식품  건강식품-다이어트 제품  2021-Q3  \n",
+       "8192   해당없음  축산·수산물 식품         고등어      수산물-해양어류  2021-Q3  \n",
+       "11129  해당없음  축산·수산물 식품           소       축산물-포유류  2021-Q3  \n",
+       "13216  해당없음       가공식품    떡볶이(라볶이)         외식-분식  2021-Q3  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['접수일'] = pd.to_datetime(df['접수일']) \n",
-    "df['년도'] = df['접수일'].dt.year \n",
-    "df['분기'] = df['접수일'].dt.quarter\n",
-    "df['년도_분기'] = df['접수일'].dt.year.astype(str) + '-Q' + df['접수일'].dt.quarter.astype(str)  # '년도_분기' 컬럼을 생성하여 년도와 분기를 문자열로 연결하여 저장합니다."
+    "# df['년도'] = df['접수일'].dt.year \n",
+    "# df['분기'] = df['접수일'].dt.quarter\n",
+    "df['년도_분기'] = df['접수일'].dt.year.astype(str) + '-Q' + df['접수일'].dt.quarter.astype(str)  # '년도_분기' 컬럼을 생성하여 년도와 분기를 문자열로 연결하여 저장합니다.\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>년도_분기</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-Q3</th>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-Q4</th>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-Q1</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-Q2</th>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-Q3</th>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-Q4</th>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-Q1</th>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         count\n",
+       "년도_분기         \n",
+       "2021-Q3     11\n",
+       "2021-Q4     21\n",
+       "2022-Q1     17\n",
+       "2022-Q2     31\n",
+       "2022-Q3     36\n",
+       "2022-Q4     22\n",
+       "2023-Q1     50"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_groupby = df.groupby(\"년도_분기\")['접수일'].agg(['count'])\n",
+    "df_groupby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1394,6 +1613,9 @@
           }
          }
         },
+        "title": {
+         "text": "한국소비자원 소비자 위해 정보: 식품-알레르기 접수 건수"
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -1429,11 +1651,10 @@
     "fig = px.line(df_reset, x='년도_분기', y='count', text=\"count\")\n",
     "fig.update_traces(textposition=\"top center\")\n",
     "fig.update_layout(\n",
+    "    title = \"한국소비자원 소비자 위해 정보: 식품-알레르기 접수 건수\",\n",
     "    xaxis_title=\"년도-분기\",\n",
     "    yaxis_title=\"신고 건수\",\n",
     "    )\n",
-    "\n",
-    "\n",
     "fig.show()"
    ]
   }
