--- a/01.request/2-0.data_dig_allergy.ipynb
+++ b/01.request/2-0.data_dig_allergy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,366 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('data/data_total.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rnum</th>\n",
+       "      <th>prdlstReportNo</th>\n",
+       "      <th>productGb</th>\n",
+       "      <th>prdlstNm</th>\n",
+       "      <th>rawmtrl</th>\n",
+       "      <th>allergy</th>\n",
+       "      <th>prdkind</th>\n",
+       "      <th>prdkindstate</th>\n",
+       "      <th>manufacture</th>\n",
+       "      <th>imgurl1</th>\n",
+       "      <th>imgurl2</th>\n",
+       "      <th>nutrient</th>\n",
+       "      <th>seller</th>\n",
+       "      <th>barcode</th>\n",
+       "      <th>capacity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>201904962715</td>\n",
+       "      <td>식품</td>\n",
+       "      <td>설화눈꽃팝김부각스낵</td>\n",
+       "      <td>찹쌀,김,참깨,옥수수기름(옥배유),양파,무,대파,천일염,마늘,새우,멸치,다시마,건표...</td>\n",
+       "      <td>없음</td>\n",
+       "      <td>과자</td>\n",
+       "      <td>낱개 및 세트박스 포장</td>\n",
+       "      <td>남원혼불부각</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/2019/201904962...</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/2019/201904962...</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>알수없음</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>201904962712</td>\n",
+       "      <td>식품</td>\n",
+       "      <td>설화눈꽃팝김부각스낵 아몬드맛</td>\n",
+       "      <td>찹쌀,김,참깨,옥수수기름(옥배유),아몬드,양파,무,천일염,대파,마늘,새우,멸치,다시...</td>\n",
+       "      <td>아몬드</td>\n",
+       "      <td>과자</td>\n",
+       "      <td>낱개 및 세트박스 포장</td>\n",
+       "      <td>남원혼불부각</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/2019/201904962...</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/2019/201904962...</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>알수없음</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>201904962711</td>\n",
+       "      <td>식품</td>\n",
+       "      <td>눈꽃팝김부각스낵</td>\n",
+       "      <td>찹쌀,김,참깨,옥수수기름(옥배유),양파,무,대파,천일염,마늘,새우,멸치,다시마,건표...</td>\n",
+       "      <td>없음</td>\n",
+       "      <td>과자</td>\n",
+       "      <td>낱개 및 세트박스 포장</td>\n",
+       "      <td>남원혼불부각</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/2019/201904962...</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/2019/201904962...</td>\n",
+       "      <td>찹쌀(국산)45%,김(국산)25%,옥수수유(외국산), 참깨,양파,무,대파,마늘,천일...</td>\n",
+       "      <td>남원혼불부각</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>알수없음</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>201903787252</td>\n",
+       "      <td>식품</td>\n",
+       "      <td>참군고구마칩</td>\n",
+       "      <td>군고구마</td>\n",
+       "      <td>없음</td>\n",
+       "      <td>서류가공품</td>\n",
+       "      <td>군고구마칩</td>\n",
+       "      <td>농업회사법인 참살이푸드원(주)</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/2019/201903787...</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/2019/201903787...</td>\n",
+       "      <td>열량 187kcal,나트륨 23.41mg,탄수화물 40.68g,당류 23.23g,지...</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>8 809678 470007</td>\n",
+       "      <td>알수없음</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>201903787251</td>\n",
+       "      <td>식품</td>\n",
+       "      <td>참군고구마</td>\n",
+       "      <td>군고구마</td>\n",
+       "      <td>없음</td>\n",
+       "      <td>서류가공품</td>\n",
+       "      <td>반건조</td>\n",
+       "      <td>농업회사법인 참살이푸드원(주)</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/2019/201903787...</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/2019/201903787...</td>\n",
+       "      <td>열량 171kcal,나트륨 8mg,탄수화물  37g,당류 18g,지방 1.4g,트랜...</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>8 809678 470014</td>\n",
+       "      <td>알수없음</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15087</th>\n",
+       "      <td>15088</td>\n",
+       "      <td>19550509001219</td>\n",
+       "      <td>식품</td>\n",
+       "      <td>매일양념쌈장</td>\n",
+       "      <td>된장63.15%[대두{수입산(미국산,중국산,캐나다산)},소맥분(밀:미국산,호주산),...</td>\n",
+       "      <td>대두,밀</td>\n",
+       "      <td>혼합장</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>매일식품㈜_전라남도 순천시 서면 산단1길 16</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/1955/195505090...</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/1955/195505090...</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>_</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>1KG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15088</th>\n",
+       "      <td>15089</td>\n",
+       "      <td>19550509001209</td>\n",
+       "      <td>식품</td>\n",
+       "      <td>매일맛있는신태양초고추장</td>\n",
+       "      <td>물엿,소맥분(밀:미국산,호주산),혼합양념(중국산)[고춧가루6.12%,(고추:중국산)...</td>\n",
+       "      <td>밀</td>\n",
+       "      <td>고추장</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>매일식품㈜_전라남도 순전시 서면 산단 1길 16</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/1955/195505090...</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/1955/195505090...</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>매일식품㈜_전라남도 순전시 서면 산단 1길 16</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>1KG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15089</th>\n",
+       "      <td>15090</td>\n",
+       "      <td>19550509001186</td>\n",
+       "      <td>식품</td>\n",
+       "      <td>오뚜기진간장</td>\n",
+       "      <td>탈지대두[수입산(인도산,미국산,중국산)],정제수,양조간장원액(대만산)[탈지대두,소맥...</td>\n",
+       "      <td>대두,밀</td>\n",
+       "      <td>혼합간장</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>매일식품㈜_전라남도 순천시 서면 산단1길 16</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/1955/195505090...</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/1955/195505090...</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>주식회사 오뚜기_경기도 안양시 동안구 흥안대로 405</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>13L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15090</th>\n",
+       "      <td>15091</td>\n",
+       "      <td>19550509001185</td>\n",
+       "      <td>식품</td>\n",
+       "      <td>오뚜기국간장</td>\n",
+       "      <td>정제수,아미노산액[탈지대두:외국산(인도산,미국산,중국산등)],정제소금(국산),액상과...</td>\n",
+       "      <td>대두,밀</td>\n",
+       "      <td>혼합간장</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>매일식품㈜_전라남도 순천시 서면 산단1길 16</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/1955/195505090...</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/1955/195505090...</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>주식회사 오뚜기_경기도 안양시 동안구 흥안대로 405</td>\n",
+       "      <td>8801045963068</td>\n",
+       "      <td>13L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15091</th>\n",
+       "      <td>15092</td>\n",
+       "      <td>1955050900115</td>\n",
+       "      <td>식품</td>\n",
+       "      <td>매일맛있는신고추장</td>\n",
+       "      <td>물엿, 소맥분(밀:미국산,호주산),혼합양념(중국산)[고춧가루6.12%(고추:중국산)...</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>고추장</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>매일식품㈜_전라남도 춘천시 서면 산단1길 16</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/1955/195505090...</td>\n",
+       "      <td>http://fresh.haccp.or.kr/prdimg/1955/195505090...</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>매일식품㈜_전라남도 춘천시 서면 산단1길 16</td>\n",
+       "      <td>알수없음</td>\n",
+       "      <td>17KG</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15092 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        rnum  prdlstReportNo productGb         prdlstNm  \\\n",
+       "0          1    201904962715        식품       설화눈꽃팝김부각스낵   \n",
+       "1          2    201904962712        식품  설화눈꽃팝김부각스낵 아몬드맛   \n",
+       "2          3    201904962711        식품         눈꽃팝김부각스낵   \n",
+       "3          4    201903787252        식품           참군고구마칩   \n",
+       "4          5    201903787251        식품            참군고구마   \n",
+       "...      ...             ...       ...              ...   \n",
+       "15087  15088  19550509001219        식품           매일양념쌈장   \n",
+       "15088  15089  19550509001209        식품     매일맛있는신태양초고추장   \n",
+       "15089  15090  19550509001186        식품           오뚜기진간장   \n",
+       "15090  15091  19550509001185        식품           오뚜기국간장   \n",
+       "15091  15092   1955050900115        식품        매일맛있는신고추장   \n",
+       "\n",
+       "                                                 rawmtrl allergy prdkind  \\\n",
+       "0      찹쌀,김,참깨,옥수수기름(옥배유),양파,무,대파,천일염,마늘,새우,멸치,다시마,건표...      없음      과자   \n",
+       "1      찹쌀,김,참깨,옥수수기름(옥배유),아몬드,양파,무,천일염,대파,마늘,새우,멸치,다시...     아몬드      과자   \n",
+       "2      찹쌀,김,참깨,옥수수기름(옥배유),양파,무,대파,천일염,마늘,새우,멸치,다시마,건표...      없음      과자   \n",
+       "3                                                   군고구마      없음   서류가공품   \n",
+       "4                                                   군고구마      없음   서류가공품   \n",
+       "...                                                  ...     ...     ...   \n",
+       "15087  된장63.15%[대두{수입산(미국산,중국산,캐나다산)},소맥분(밀:미국산,호주산),...    대두,밀     혼합장   \n",
+       "15088  물엿,소맥분(밀:미국산,호주산),혼합양념(중국산)[고춧가루6.12%,(고추:중국산)...       밀     고추장   \n",
+       "15089  탈지대두[수입산(인도산,미국산,중국산)],정제수,양조간장원액(대만산)[탈지대두,소맥...    대두,밀    혼합간장   \n",
+       "15090  정제수,아미노산액[탈지대두:외국산(인도산,미국산,중국산등)],정제소금(국산),액상과...    대두,밀    혼합간장   \n",
+       "15091  물엿, 소맥분(밀:미국산,호주산),혼합양념(중국산)[고춧가루6.12%(고추:중국산)...    알수없음     고추장   \n",
+       "\n",
+       "       prdkindstate                 manufacture  \\\n",
+       "0      낱개 및 세트박스 포장                      남원혼불부각   \n",
+       "1      낱개 및 세트박스 포장                      남원혼불부각   \n",
+       "2      낱개 및 세트박스 포장                      남원혼불부각   \n",
+       "3             군고구마칩            농업회사법인 참살이푸드원(주)   \n",
+       "4               반건조            농업회사법인 참살이푸드원(주)   \n",
+       "...             ...                         ...   \n",
+       "15087          알수없음   매일식품㈜_전라남도 순천시 서면 산단1길 16   \n",
+       "15088          알수없음  매일식품㈜_전라남도 순전시 서면 산단 1길 16   \n",
+       "15089          알수없음   매일식품㈜_전라남도 순천시 서면 산단1길 16   \n",
+       "15090          알수없음   매일식품㈜_전라남도 순천시 서면 산단1길 16   \n",
+       "15091          알수없음   매일식품㈜_전라남도 춘천시 서면 산단1길 16   \n",
+       "\n",
+       "                                                 imgurl1  \\\n",
+       "0      http://fresh.haccp.or.kr/prdimg/2019/201904962...   \n",
+       "1      http://fresh.haccp.or.kr/prdimg/2019/201904962...   \n",
+       "2      http://fresh.haccp.or.kr/prdimg/2019/201904962...   \n",
+       "3      http://fresh.haccp.or.kr/prdimg/2019/201903787...   \n",
+       "4      http://fresh.haccp.or.kr/prdimg/2019/201903787...   \n",
+       "...                                                  ...   \n",
+       "15087  http://fresh.haccp.or.kr/prdimg/1955/195505090...   \n",
+       "15088  http://fresh.haccp.or.kr/prdimg/1955/195505090...   \n",
+       "15089  http://fresh.haccp.or.kr/prdimg/1955/195505090...   \n",
+       "15090  http://fresh.haccp.or.kr/prdimg/1955/195505090...   \n",
+       "15091  http://fresh.haccp.or.kr/prdimg/1955/195505090...   \n",
+       "\n",
+       "                                                 imgurl2  \\\n",
+       "0      http://fresh.haccp.or.kr/prdimg/2019/201904962...   \n",
+       "1      http://fresh.haccp.or.kr/prdimg/2019/201904962...   \n",
+       "2      http://fresh.haccp.or.kr/prdimg/2019/201904962...   \n",
+       "3      http://fresh.haccp.or.kr/prdimg/2019/201903787...   \n",
+       "4      http://fresh.haccp.or.kr/prdimg/2019/201903787...   \n",
+       "...                                                  ...   \n",
+       "15087  http://fresh.haccp.or.kr/prdimg/1955/195505090...   \n",
+       "15088  http://fresh.haccp.or.kr/prdimg/1955/195505090...   \n",
+       "15089  http://fresh.haccp.or.kr/prdimg/1955/195505090...   \n",
+       "15090  http://fresh.haccp.or.kr/prdimg/1955/195505090...   \n",
+       "15091  http://fresh.haccp.or.kr/prdimg/1955/195505090...   \n",
+       "\n",
+       "                                                nutrient  \\\n",
+       "0                                                   알수없음   \n",
+       "1                                                   알수없음   \n",
+       "2      찹쌀(국산)45%,김(국산)25%,옥수수유(외국산), 참깨,양파,무,대파,마늘,천일...   \n",
+       "3      열량 187kcal,나트륨 23.41mg,탄수화물 40.68g,당류 23.23g,지...   \n",
+       "4      열량 171kcal,나트륨 8mg,탄수화물  37g,당류 18g,지방 1.4g,트랜...   \n",
+       "...                                                  ...   \n",
+       "15087                                               알수없음   \n",
+       "15088                                               알수없음   \n",
+       "15089                                               알수없음   \n",
+       "15090                                               알수없음   \n",
+       "15091                                               알수없음   \n",
+       "\n",
+       "                              seller          barcode capacity  \n",
+       "0                               알수없음             알수없음     알수없음  \n",
+       "1                               알수없음             알수없음     알수없음  \n",
+       "2                             남원혼불부각             알수없음     알수없음  \n",
+       "3                               알수없음  8 809678 470007     알수없음  \n",
+       "4                               알수없음  8 809678 470014     알수없음  \n",
+       "...                              ...              ...      ...  \n",
+       "15087                              _             알수없음      1KG  \n",
+       "15088     매일식품㈜_전라남도 순전시 서면 산단 1길 16             알수없음      1KG  \n",
+       "15089  주식회사 오뚜기_경기도 안양시 동안구 흥안대로 405             알수없음      13L  \n",
+       "15090  주식회사 오뚜기_경기도 안양시 동안구 흥안대로 405    8801045963068      13L  \n",
+       "15091      매일식품㈜_전라남도 춘천시 서면 산단1길 16             알수없음     17KG  \n",
+       "\n",
+       "[15092 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['prdlstNm'].str.contains(\"하이라이스\")]\n",
+    "df = df.fillna(\"알수없음\")\n",
+    "df[df['barcode'].str.contains(\"8801045738154\")]\n",
+    "df.sort_values('prdlstReportNo', ascending=False)\n",
+    "# df_sorted = df.sort_values('접수일', ascending=True)\n"
    ]
   },
   {
